[package]
name = "teamfinder_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { version = "^0.7", features = ["v4"] }
serde = { version = "^1", features = ["derive"]}
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"]}
tokio = "1.27.0"
dotenv = "0.15"
listenfd = "0.3"
actix-rt = "2.2"
serde_json = "^1"
